--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Abu Kalam",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "mongoose": "^7.3.0",
     "validator": "^13.9.0"
