--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Abu Kalam",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
