--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "test": "jest"
   },
   "author": "Abu Kalam",
   "license": "ISC",
@@ -18,5 +19,8 @@
     "multer": "^1.4.5-lts.1",
     "sharp": "^0.32.1",
     "validator": "^13.9.0"
+  },
+  "devDependencies": {
+    "jest": "^29.5.0"
   }
 }
