--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^7.3.0",
     "multer": "^1.4.5-lts.1",
     "sharp": "^0.32.1",
+    "supertest": "^6.3.3",
     "validator": "^13.9.0"
   },
   "devDependencies": {
