--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "jest"
+    "test": "jest --runInBand"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "author": "Abu Kalam",
   "license": "ISC",
@@ -18,7 +21,6 @@
     "mongoose": "^7.3.0",
     "multer": "^1.4.5-lts.1",
     "sharp": "^0.32.1",
-    "supertest": "^6.3.3",
     "validator": "^13.9.0"
   },
   "devDependencies": {
